Update desafio tabela 4.html

--- a/desafio tabela 4.html
+++ b/desafio tabela 4.html
@@ -37,7 +37,7 @@
         </thead>
         <tbody>
             <tr>
-                <th rowspan="3" colspan="2">Exatas</td>
+                <th rowspan="4" colspan="2">Exatas</td>
                 <td colspan="2">Matemática</td>
                 <td class="center">0.0</td>
                 <td class="center">0.0</td>
@@ -51,6 +51,12 @@
             </tr>
             <tr>
                 <td colspan="2">Química</td>
+                <td class="center">0.0</td>
+                <td class="center">0.0</td>
+                <td class="center">0.0</td>
+            </tr>
+            <tr>
+                <td colspan="2">Biologia</td>
                 <td class="center">0.0</td>
                 <td class="center">0.0</td>
                 <td class="center">0.0</td>
