Update desafio tabela 4.html

--- a/desafio tabela 4.html
+++ b/desafio tabela 4.html
@@ -15,7 +15,7 @@
         .center{text-align: center;}
         #center{text-align: center;}
         .title{font-family: 'Montserrat Alternates'; text-align: center; padding: 20px; background-color: transparent;}
-        td:hover{background-color: yellow; color: black;}
+        td:hover{background-color: lightblue; color: black; transition-duration: 0.4s;}
         
 
 
